compilador/test_programs/invalid/03_duplicate_variable.patito
programa duplicate_var;
vars:
    x: entero;
    x: flotante;

inicio {
    x = 5;
}
fin
